<resources>
    <string name="app_name">Punto4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">CALCULAR AREA</string>
    <string name="side">Lado: </string>
    <string name="base">Base: </string>
    <string name="height">Altura: </string>
    <string name="radius">Radio: </string>
    <string name="square">Cuadrado</string>
    <string name="triangle">Triángulo</string>
    <string name="rectangle">Rectángulo</string>
    <string name="circle">Círculo</string>
    <string name="button">Calcular</string>
    <string name="text">El área es: </string>
    <string name="hintSquare">Cuadrado</string>
    <string name="hintTriangle">Triángulo o Rectángulo</string>
    <string name="hintCircle">Círculo</string>
    
</resources>
