<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layout_margin="5dp"
    android:gravity="center">

    <TextView
        style="@style/Text"
        android:layout_margin="15dp"
        android:text="@string/title"
        android:textSize="20dp"
        android:textColor="@color/darkcyan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            style="@style/Text"
            android:layout_weight="3"
            android:text="@string/side"
            android:textSize="20dp"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold"/>

        <EditText
            style="@style/Text.Edit"
            android:hint="@string/hintSquare"
            android:textSize="20dp"
            android:enabled="true"
            android:id="@+id/eSide"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            style="@style/Text"
            android:layout_weight="3"
            android:text="@string/base"
            android:textSize="20dp"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold"/>

        <EditText
            style="@style/Text.Edit"
            android:hint="@string/hintTriangle"
            android:textSize="20dp"
            android:enabled="false"
            android:id="@+id/eBase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            style="@style/Text"
            android:layout_weight="3"
            android:text="@string/height"
            android:textSize="20dp"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold"/>

        <EditText
            style="@style/Text.Edit"
            android:hint="@string/hintTriangle"
            android:textSize="20dp"
            android:enabled="false"
            android:id="@+id/eHeight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            style="@style/Text"
            android:layout_weight="3"
            android:text="@string/radius"
            android:textSize="20dp"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold"/>

        <EditText
            style="@style/Text.Edit"
            android:hint="@string/hintCircle"
            android:textSize="20dp"
            android:enabled="false"
            android:id="@+id/eRadius"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <RadioButton
            style="@style/Text.Radio"
            android:text="@string/square"
            android:checked="true"
            android:id="@+id/cSquare"/>

        <RadioButton
            style="@style/Text.Radio"
            android:text="@string/triangle"
            android:id="@+id/cTriangle"/>

        <RadioButton
            style="@style/Text.Radio"
            android:text="@string/rectangle"
            android:id="@+id/cRectangle"/>

        <RadioButton
            style="@style/Text.Radio"
            android:text="@string/circle"
            android:id="@+id/cCircle"/>

    </RadioGroup>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/darkcyan"
        android:text="@string/button"
        android:textSize="20dp"
        android:textColor="@color/whitesmoke"
        android:id="@+id/button"/>

    <TextView
        style="@style/Text"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:textColor="@color/whitesmoke"
        android:id="@+id/tResult"/>

</LinearLayout>